# jamesturk.net

./: .gitignore  Justfile  _publish.yml  _quarto.yml  cert.sh  cf.py  config.toml  index.qmd  publish.sh  pyproject.toml
.github/workflows/: publish.yml
about/: index.qmd
content/posts/: deploying-hugo-to-cloudfront.md  eight-years.md  eight.md  federated.md  new-site-old-content.md  scraping-with-gpt-4.md  scraping-with-gpt-part-2.md  sunlight.md  that-libyan-dictator.md  vscode.md  websearch-in-django-31.md
data/: links.yaml
posts/: 2007-tools-post.md  _metadata.yml  deploying-hugo-to-cloudfront.md  eight-years.md  four-years.md  new-site-old-content.md  reclaiming-time-with-twitter-rss.md  rochester-barcamp-3.md  scraping-with-gpt-part-2.md  today-in-history.md
posts/2007-tools-post/: index.md
posts/deploying-hugo-to-cloudfront/: index.md
posts/eight-years/: index.md
posts/federated/: index.md
posts/four-years/: index.md
posts/jellyfish-is-now-rust/: index.qmd
posts/mediaparty-2023/: index.qmd
posts/new-site-old-content/: index.md
posts/quarto/: index.qmd
posts/reclaiming-time-with-twitter-rss/: index.md
posts/rochester-barcamp-3/: index.md
posts/scraping-with-gpt-4/: index.md
posts/scraping-with-gpt-part-2/: index.md
posts/today-in-history/: index.md
posts/vscode/: index.md
posts/websearch-in-django-31/: index.md
posts/you-dont-need-all/: index.md  module.py  no_all.py
presentations/scrapeghost-mediaparty-2023/: demo.ipynb  demo.py  ex3.py  index.qmd
projects/: index.qmd
themes/jpt/: LICENSE.md  theme.toml
(+9 files in other folders)
